--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
     <h1>Request Account Deletion</h1>
     <p>If you want to delete your account, please contact us at:</p>
-    <p><strong>Email:</strong> support@newfrequency.com</p>
+    <p><strong>Email:</strong> newfrequency.io@gmail.com</p>
 </body>
 </html>
